listed certificates from token with session